# opentown

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
opentown/: __init__.py  cli.py  monitor.py  persistence.py  tmux.py
opentown/roles/: __init__.py  ceo.py  engineer.py  manager.py  qa.py
